--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@truffle/hdwallet-provider": "^2.1.15",
+    "debug": "^4.3.4",
+    "sqlite3": "^5.1.7",
     "truffle": "^5.11.5"
   }
 }
